--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,3 +1,21 @@
-<div class="header">
-  This is header
-</div>
+<header class="header">
+  <div class="header-container">
+    <div class="header-logo">
+      <a href="#">
+        <img src="assets/icons/logo.png" alt="header-logo">
+      </a>
+    </div>
+    <div class="header-menu">
+      <a class="menu-item" href="#">Home</a>
+      <a class="menu-item" href="#">Bonus</a>
+      <a class="menu-item" href="#">FAQ</a>
+      <a class="menu-item" href="#">Support</a>
+    </div>
+  </div>
+  <div class="header-user"> 
+      <button class="header-button">
+        <img src="assets/icons/user-icon.png" alt="">Sign UP
+      </button>
+  </div>
+</header>
+
