--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,15 +6,23 @@
       </a>
     </div>
     <div class="header-menu">
-      <a class="menu-item" href="#">Home</a>
-      <a class="menu-item" href="#">Bonus</a>
-      <a class="menu-item" href="#">FAQ</a>
-      <a class="menu-item" href="#">Support</a>
+      <a class="menu-item" href="#">
+        <img class="icons" src="assets/icons/home.png" alt="home">Home
+      </a>
+      <a class="menu-item" href="#">
+        <img class="icons" src="assets/icons/money.png" alt="home">Bonus
+      </a>
+      <a class="menu-item" href="#">
+        <img class="icons" src="assets/icons/information.png" alt="home">FAQ
+      </a>
+      <a class="menu-item" href="#">
+        <img class="icons" src="assets/icons/support.png" alt="home">Support
+      </a>
     </div>
   </div>
   <div class="header-user"> 
       <button class="header-button">
-        <img src="assets/icons/user-icon.png" alt="">Sign UP
+        <img class="icons" src="assets/icons/user-icon.png" alt="">Sign UP
       </button>
   </div>
 </header>
