--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,5 +2,5 @@
 
 body {
   margin: 0;
-  background-image: url(assets/images/background.jpg);
+  border-image: url("assets/images/background.jpg");
 }
