--- a/src/app/components/cases/components/case-item/case-item.component.html
+++ b/src/app/components/cases/components/case-item/case-item.component.html
@@ -1,4 +1,4 @@
-<div class="case">
+<div class="case" (click)="caseClick()">
   <div class="case_image">
     <img [src]="case.imageUrl" [alt]="case.name">
   </div>
