--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,22 +7,22 @@
     </div>
     <div class="header-menu">
       <a class="menu-item" href="#">
-        <img class="icons" src="assets/icons/home.png" alt="home">Home
+        <img class="header-icon" src="assets/icons/home.png" alt="home">Home
       </a>
       <a class="menu-item" href="#">
-        <img class="icons" src="assets/icons/money.png" alt="home">Bonus
+        <img class="header-icon" src="assets/icons/money.png" alt="home">Bonus
       </a>
       <a class="menu-item" href="#">
-        <img class="icons" src="assets/icons/information.png" alt="home">FAQ
+        <img class="header-icon" src="assets/icons/information.png" alt="home">FAQ
       </a>
       <a class="menu-item" href="#">
-        <img class="icons" src="assets/icons/support.png" alt="home">Support
+        <img class="header-icon" src="assets/icons/support.png" alt="home">Support
       </a>
     </div>
   </div>
   <div class="header-user"> 
       <button class="header-button">
-        <img class="icons" src="assets/icons/user-icon.png" alt="">Sign UP
+        <img class="header-icon" src="assets/icons/user-icon.png" alt="">Sign UP
       </button>
   </div>
 </header>
