--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,10 +1,3 @@
-* {
-    font-family: sans-serif;
-    font-size: 15px;
-    font-weight: bold;
-}
-
-
 
 // Start header
 
@@ -22,56 +15,57 @@ header {
     .header-container {
         align-items: center;
         display: flex;
-        
+        gap: 50px;
     }
 
     .header-menu {
-        margin-left: 50px;
-        a {
-            margin-left: 25px;
-        }
+        display: flex;
+        gap: 24px;
+    
 
         .menu-item {
             display: inline-flex;
             justify-content: center;
-            padding: 5px 10px;
+            align-items: center;
+            padding: 6px 12px;
+            line-height: 16px;
+            color: #fff;
+            background-color: #088b3f;
+            border-radius: 8px;
             
         }
         .menu-item:hover {
-            padding: 5px 10px;
-            color: #000000;
-            box-shadow: 0 0 20px #a200fa, 0 0 30px #a200fa;
-            border-radius: 30px;
+            background-color: #088b3f;
+            box-shadow: 0 0 12px #088b3f, 0 0 16px #024736;
+            border-radius: 6px;
         }
     }
         
         
     .header-icon {
-        padding-right: 10px;
-        width: 18px;
-        height: 18px;
+        margin-right: 4px;
+        width: 16px;
+        height: 16px;
     }
     .header-user {
         button {
             display: flex;
             align-items: center;
-            min-width: 150px;
-            font-size: 15px;
-            background-color: transparent;
-            border: 2px solid #fff;
-            border-radius: 30px;
+            font-size: 16px;
+            background-color: #088b3f;
+            border: 2px solid #023a05;
+            border-radius: 6px;
             text-transform: uppercase;
             letter-spacing: 2px;
-            color: #a200fa;
-            box-shadow: 0 0 15px #a200fa, inset 0 0 15px #a200fa;
+            color:#fff;
             cursor: pointer;
-            padding: 10px 10px;
+            padding: 8px 16px;
+
         }
         button:hover {
             color: #fff;
-            background: #a200fa;
-            box-shadow: 0 0 20px #a200fa, 0 0 30px #a200fa
-
+            background: #28920d;
+            box-shadow: 0 0 12px #088b3f, 0 0 16px #024736;
         }
     }
 }   
