add icons on footer

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,47 @@
 <div class="footer">
-    
+    <div class="footer-statistics">
+        <div class="open-statistics">
+            <img class="open-statistic-icon" src="assets/icons/case-icon.png" alt="open-icon">
+            <p class="open-statistic-text">1000</p>
+        </div>
+        <div class="upgrades-statistics">
+            <img class="open-statistic-icon" src="assets/icons/upgrade-icon.png" alt="open-icon">
+            <p class="open-statistic-text">1000</p>
+        </div>
+        <div class="user-statistics">
+            <img class="open-statistic-icon" src="assets/icons/user-icon.png" alt="open-icon">
+            <p class="open-statistic-text">1000</p>
+        </div>
+        <div class="online-statistics">
+            <img class="open-statistic-icon" src="assets/icons/online-icon.png" alt="open-icon">
+            <p class="open-statistic-text">1000</p>
+        </div>
+    </div>
+    <div class="footer-info">
+        <div class="footer-payment-methods">
+            <img src="assets/icons/visa-icon.png" alt="visa">
+            <img src="assets/icons/mastercard-icon.png" alt="mastercard">
+            <img src="assets/icons/steam-icon.png" alt="steam-skins">
+            <img src="assets/icons/crypto-icon.png" alt="crypto">
+        </div>
+        <div class="footer-social">
+            <div class="social-insta">
+                <a href=""><img src="assets/icons/insta-icon.png" alt="inst"></a>
+            </div>
+            <div class="social-telegramm"><a href=""><img src="assets/icons/telegram-icon.png" alt="tg"></a></div>
+            <div class="social-tiktok"><a href=""><img src="assets/icons/tiktok-icon.png" alt="tk"></a></div>
+            <div class="social-discord"><a href=""><img src="" alt="ds"></a></div>
+    </div>
+</div>
+    <div class="footer-corp">
+        <div class="user-agreement">
+            <a href="#">User agreement</a> 
+        </div>
+        <div class="about-us">
+            <a href="">About Us</a>
+        </div>
+        <div class="mail">
+            <a  href="mailto:example&#64;gmail.com">example&#64;gmail.com</a>
+        </div>
+    </div>
 </div>
