--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,20 +1,24 @@
-<div class="footer">
+<div class="footer container mx-auto px-4">
     <div class="footer-statistics">
         <div class="open-statistics">
             <img class="open-statistic-icon" src="assets/icons/case-icon.png" alt="open-icon">
-            <p class="open-statistic-text">1000</p>
+            <h2 class="open-statistic-text">1000</h2>
+            <p>Cases</p>
         </div>
         <div class="upgrades-statistics">
-            <img class="open-statistic-icon" src="assets/icons/upgrade-icon.png" alt="open-icon">
-            <p class="open-statistic-text">1000</p>
+            <img class="upgrades-statistic-icon" src="assets/icons/upgrade-icon.png" alt="upgrades-icon">
+            <h2 class="upgrades-statistic-text">1000</h2>
+            <p>Upgrades</p>
         </div>
         <div class="user-statistics">
-            <img class="open-statistic-icon" src="assets/icons/user-icon.png" alt="open-icon">
-            <p class="open-statistic-text">1000</p>
+            <img class="user-statistic-icon" src="assets/icons/user-icon.png" alt="user-icon">
+            <h2 class="user-statistic-text">1000</h2>
+            <p>Users</p>
         </div>
         <div class="online-statistics">
-            <img class="open-statistic-icon" src="assets/icons/online-icon.png" alt="open-icon">
-            <p class="open-statistic-text">1000</p>
+            <img class="online-statistic-icon" src="assets/icons/online-icon.png" alt="online-icon">
+            <h2 class="online-statistic-text">1000</h2>
+            <p>Online</p>
         </div>
     </div>
     <div class="footer-info">
@@ -30,9 +34,9 @@
             </div>
             <div class="social-telegramm"><a href=""><img src="assets/icons/telegram-icon.png" alt="tg"></a></div>
             <div class="social-tiktok"><a href=""><img src="assets/icons/tiktok-icon.png" alt="tk"></a></div>
-            <div class="social-discord"><a href=""><img src="" alt="ds"></a></div>
+            <div class="social-discord"><a href=""><img src="assets/icons/discord-icon.png" alt="ds"></a></div>
+        </div>
     </div>
-</div>
     <div class="footer-corp">
         <div class="user-agreement">
             <a href="#">User agreement</a> 
