--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,23 +1,39 @@
 .footer {
+    font-weight: bold;
+    color: bisque;
+    padding: 100px 100px 20px;
+    background-color: rgb(19, 77, 77);
     .footer-statistics {
         display: flex;
         justify-content: space-around;
-        p {
-            text-align: center;
+        text-align: center;
+        padding-bottom: 24px;
+        div {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            h2 {
+                padding: 24px 0 8px;
+                font-size: 40px;
+                line-height: 24px;
+                letter-spacing: 2px;
+            }
+            img {
+                width: 56px;
+                height: 56px;
+            }
         }
-        img {
-            width: 50px;
-            height: 50px;
-        }
+        
     }
 
     .footer-info {
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
+        padding: 0px 102px;
         img {
-            margin: 30px;
-            width: 30px;
-            height: 30px;
+            margin: 16px;
+            width: 40px;
+            height: 40px;
         }
 
         .footer-payment-methods {
@@ -27,6 +43,13 @@
             display: flex;
         }
     }
+
+    .footer-corp {
+        display: flex;
+        justify-content: center;
+        div:not(:last-child) {
+            margin-right: 24px;
+        }
     
-    
+    }
 }
