footer and header styling

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,8 +1,8 @@
 <header class="header">
   <div class="header-container">
     <div class="header-logo">
-      <a href="#">
-        <img src="assets/icons/logo.png" alt="header-logo">
+      <a href="#">Logo
+        <!-- <img src="" alt="header-logo"> -->
       </a>
     </div>
     <div class="header-menu">
@@ -21,9 +21,10 @@
     </div>
   </div>
   <div class="header-user">
-      <button class="header-button">
-        <img class="header-icon" src="assets/icons/user-icon.png" alt="">Sign UP
-      </button>
+      <a class="header-button">
+        <img class="header-icon" src="assets/icons/user-icon.png" alt="">
+        <span class="header-user-text">Sign UP</span>
+      </a>
   </div>
 </header>
 
