--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -6,10 +6,11 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px 50px;
+    background-color: #123435;
 
     a {
         text-decoration: none;
-        color: #271212;
+        color: bisque;
     }
 
     .header-container {
@@ -29,15 +30,11 @@ header {
             align-items: center;
             padding: 6px 12px;
             line-height: 16px;
-            color: #fff;
-            background-color: #088b3f;
-            border-radius: 8px;
-            
+            color: #fff;     
         }
         .menu-item:hover {
-            background-color: #088b3f;
-            box-shadow: 0 0 12px #088b3f, 0 0 16px #024736;
-            border-radius: 6px;
+            color: #2cbfc4;
+            text-shadow: #FC0 6px 0 16px;
         }
     }
         
@@ -48,24 +45,28 @@ header {
         height: 16px;
     }
     .header-user {
-        button {
+        
+        
+        a {
             display: flex;
+            justify-content: center;
             align-items: center;
+            background-color: #4CAF50;
+            border: none;
+            border-radius: 5px;
+            color: white;
+            padding: 15px 32px;
+            text-decoration: none;
             font-size: 16px;
-            background-color: #088b3f;
-            border: 2px solid #023a05;
-            border-radius: 6px;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            color:#fff;
+            font-weight: 400;
             cursor: pointer;
-            padding: 8px 16px;
+            img {
+                margin-right: 10px;
+            }
 
         }
-        button:hover {
-            color: #fff;
-            background: #28920d;
-            box-shadow: 0 0 12px #088b3f, 0 0 16px #024736;
+        a:hover {
+            
         }
     }
 }   
