added button animation and styles to the menu header

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -21,10 +21,11 @@
     </div>
   </div>
   <div class="header-user">
-      <a class="header-button">
-        <img class="header-icon" src="assets/icons/user-icon.png" alt="">
-        <span class="header-user-text">Sign UP</span>
-      </a>
+    <a href="/">
+      <button class="bn54">
+        <span class="bn54span">Sign Up</span>
+      </button>
+    </a>
   </div>
 </header>
 
