--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -11,8 +11,12 @@ header {
     a {
         text-decoration: none;
         color: bisque;
+        cursor: pointer;
     }
-
+    a:hover img {
+        filter: invert(1) sepia(1) saturate(5) hue-rotate(90deg);
+        
+    }
     .header-container {
         align-items: center;
         display: flex;
@@ -34,7 +38,8 @@ header {
         }
         .menu-item:hover {
             color: #2cbfc4;
-            text-shadow: #FC0 6px 0 16px;
+            text-shadow: rgb(28, 150, 180) 6px 0 16px;
+            transform: scale(1.1);
         }
     }
         
@@ -43,31 +48,79 @@ header {
         margin-right: 4px;
         width: 16px;
         height: 16px;
+        
+        
     }
     .header-user {
-        
-        
-        a {
+        .bn54 {
+            position: relative;
+            outline: none;
+            text-decoration: none;
+            border-radius: 50px;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #4CAF50;
-            border: none;
-            border-radius: 5px;
-            color: white;
-            padding: 15px 32px;
-            text-decoration: none;
-            font-size: 16px;
-            font-weight: 400;
             cursor: pointer;
-            img {
-                margin-right: 10px;
+            text-transform: uppercase;
+            height: 45px;
+            width: 130px;
+            opacity: 1;
+            background-color: #1e9bee;
+            border: 1px solid rgba(0, 0, 0, 0.6);
+        }
+        
+        .bn54 .bn54span {
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            color: #ffffff;
+            font-size: 12px;
+            font-weight: 500;
+            letter-spacing: 0.7px;
+        }
+        
+        .bn54:hover {
+            animation: bn54rotate 0.7s ease-in-out both;
+            box-shadow:0px 0px 24px #2cbfc4;
+        }
+        
+        .bn54:hover .bn54span {
+            animation: bn54storm 0.7s ease-in-out both;
+            animation-delay: 0.06s;
+        }
+        
+        @keyframes bn54rotate {
+            0% {
+                transform: rotate(0deg) translate3d(0, 0, 0);
             }
-
+            25% {
+                transform: rotate(3deg) translate3d(0, 0, 0);
+            }
+            50% {
+                transform: rotate(-3deg) translate3d(0, 0, 0);
+            }
+            75% {
+                transform: rotate(1deg) translate3d(0, 0, 0);
+            }
+            100% {
+                transform: rotate(0deg) translate3d(0, 0, 0);
+            }
         }
-        a:hover {
-            
+        
+        @keyframes bn54storm {
+            0% {
+                transform: translate3d(0, 0, 0) translateZ(0);
+            }
+            25% {
+                transform: translate3d(4px, 0, 0) translateZ(0);
+            }
+            50% {
+                transform: translate3d(-3px, 0, 0) translateZ(0);
+            }
+            75% {
+                transform: translate3d(2px, 0, 0) translateZ(0);
+            }
+            100% {
+                transform: translate3d(0, 0, 0) translateZ(0);
+            }
         }
-    }
-}   
-
+    }   
+}
