--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -39,9 +39,11 @@
             margin: 16px;
             width: 40px;
             height: 40px;
+            transition: transform 0.4s ease;
         }
         img:hover {
             transform: scale(1.5);
+            
         }
 
         .footer-payment-methods {
