--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,51 +1,53 @@
-<div class="footer container mx-auto px-4">
-    <div class="footer-statistics">
-        <div class="open-statistics">
-            <img class="open-statistic-icon" src="assets/icons/case-icon.png" alt="open-icon">
-            <h2 class="open-statistic-text">1000</h2>
-            <p>Cases</p>
-        </div>
-        <div class="upgrades-statistics">
-            <img class="upgrades-statistic-icon" src="assets/icons/upgrade-icon.png" alt="upgrades-icon">
-            <h2 class="upgrades-statistic-text">1000</h2>
-            <p>Upgrades</p>
-        </div>
-        <div class="user-statistics">
-            <img class="user-statistic-icon" src="assets/icons/user-icon.png" alt="user-icon">
-            <h2 class="user-statistic-text">1000</h2>
-            <p>Users</p>
-        </div>
-        <div class="online-statistics">
-            <img class="online-statistic-icon" src="assets/icons/online-icon.png" alt="online-icon">
-            <h2 class="online-statistic-text">1000</h2>
-            <p>Online</p>
-        </div>
-    </div>
-    <div class="footer-info">
-        <div class="footer-payment-methods">
-            <img src="assets/icons/visa-icon.png" alt="visa">
-            <img src="assets/icons/mastercard-icon.png" alt="mastercard">
-            <img src="assets/icons/steam-icon.png" alt="steam-skins">
-            <img src="assets/icons/crypto-icon.png" alt="crypto">
-        </div>
-        <div class="footer-social">
-            <div class="social-insta">
-                <a href=""><img src="assets/icons/insta-icon.png" alt="inst"></a>
+<div class="footer">
+    <div class="footer-container container mx-auto px-4">
+        <div class="footer-statistics">
+            <div class="open-statistics">
+                <img class="open-statistic-icon" src="assets/icons/case-icon.png" alt="open-icon">
+                <h2 class="open-statistic-text">1000</h2>
+                <p>Cases</p>
             </div>
-            <div class="social-telegramm"><a href=""><img src="assets/icons/telegram-icon.png" alt="tg"></a></div>
-            <div class="social-tiktok"><a href=""><img src="assets/icons/tiktok-icon.png" alt="tk"></a></div>
-            <div class="social-discord"><a href=""><img src="assets/icons/discord-icon.png" alt="ds"></a></div>
+            <div class="upgrades-statistics">
+                <img class="upgrades-statistic-icon" src="assets/icons/upgrade-icon.png" alt="upgrades-icon">
+                <h2 class="upgrades-statistic-text">1000</h2>
+                <p>Upgrades</p>
+            </div>
+            <div class="user-statistics">
+                <img class="user-statistic-icon" src="assets/icons/user-icon.png" alt="user-icon">
+                <h2 class="user-statistic-text">1000</h2>
+                <p>Users</p>
+            </div>
+            <div class="online-statistics">
+                <img class="online-statistic-icon" src="assets/icons/online-icon.png" alt="online-icon">
+                <h2 class="online-statistic-text">1000</h2>
+                <p>Online</p>
+            </div>
         </div>
-    </div>
-    <div class="footer-corp">
-        <div class="user-agreement">
-            <a href="#">User agreement</a> 
+        <div class="footer-info">
+            <div class="footer-payment-methods">
+                <img src="assets/icons/visa-icon.png" alt="visa">
+                <img src="assets/icons/mastercard-icon.png" alt="mastercard">
+                <img src="assets/icons/steam-icon.png" alt="steam-skins">
+                <img src="assets/icons/crypto-icon.png" alt="crypto">
+            </div>
+            <div class="footer-social">
+                <div class="social-insta">
+                    <a href=""><img src="assets/icons/insta-icon.png" alt="inst"></a>
+                </div>
+                <div class="social-telegramm"><a href=""><img src="assets/icons/telegram-icon.png" alt="tg"></a></div>
+                <div class="social-tiktok"><a href=""><img src="assets/icons/tiktok-icon.png" alt="tk"></a></div>
+                <div class="social-discord"><a href=""><img src="assets/icons/discord-icon.png" alt="ds"></a></div>
+            </div>
         </div>
-        <div class="about-us">
-            <a href="">About Us</a>
-        </div>
-        <div class="mail">
-            <a  href="mailto:example&#64;gmail.com">example&#64;gmail.com</a>
+        <div class="footer-corp">
+            <div class="user-agreement">
+                <a href="#">User agreement</a> 
+            </div>
+            <div class="about-us">
+                <a href="">About Us</a>
+            </div>
+            <div class="mail">
+                <a  href="mailto:example&#64;gmail.com">example&#64;gmail.com</a>
+            </div>
         </div>
     </div>
 </div>
