--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -10,6 +10,9 @@
         <img class="header-icon" src="assets/icons/home.png" alt="home">Home
       </a>
       <a class="menu-item" href="#">
+        <img class="header-icon" src="assets/icons/gun-icon.png" alt="home">Skins
+      </a>
+      <a class="menu-item" href="#">
         <img class="header-icon" src="assets/icons/money.png" alt="home">Bonus
       </a>
       <a class="menu-item" href="#">
