fixed skins item

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -9,7 +9,7 @@
       <a class="menu-item" routerLink="/case">
         <img class="header-icon" src="assets/icons/home.png" alt="home">Home
       </a>
-      <a class="menu-item"  routerLink="/skins">>
+      <a class="menu-item"  routerLink="/skins">
         <img class="header-icon" src="assets/icons/gun-icon.png" alt="home">Skins
       </a>
       <a class="menu-item" href="#">
